Updated submodules and path for django ninja

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,4 @@
 [submodule "src/ninja_auth"]
 	path = src/ninja_auth
-	url = git@github.com:mugartec/django-ninja-auth.git
-[submodule "src/django_ninja_auth"]
-	path = src/django_ninja_auth
-	url = git@github.com:mugartec/django-ninja-auth.git
+	url = https://github.com/mugartec/django-ninja-auth.git
+  branch = master
