--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -14,6 +14,7 @@ psycopg2 = "^2.8.6"
 uvicorn = {extras = ["standard"], version = "^0.13.4"}
 pytest = "^6.2.4"
 dj-database-url = "^0.5.0"
+django-ninja-auth = "^0.1.5"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.8.0"
