chore: update to use local (and new) version of django-ninja

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "src/ninja_auth"]
 	path = src/ninja_auth
-	url = https://github.com/mugartec/django-ninja-auth.git
+	url = git@github.com:mugartec/django-ninja-auth.git
   branch = master
