--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ DATABASE_PORT=5432
 DATABASE_NAME=db_name
 DJANGO_SECRET_KEY=ThisWillNeverBeOnProduction
 FRONTEND_URL=localhost:3000
+ALLOWED_HOSTS=["localhost"]
+CSRF_TRUSTED_ORIGINS=["http://localhost:3000"]
