--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -5,24 +5,21 @@ description = "Backend for the example app to showcase django-ninja-auth"
 authors = ["Martín Ugarte <contact@martinugarte.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-Django = "^3.2.3"
-django-ninja = "^0.13.0"
-pydantic = "^1.8.2"
+python = "^3.11"
+Django = "^4.2.4"
+django-ninja = "^0.13.2"
+pydantic = "^1.8.0"
 gunicorn = "^20.1.0"
-psycopg2 = "^2.8.6"
-uvicorn = {extras = ["standard"], version = "^0.13.4"}
-pytest = "^6.2.4"
-dj-database-url = "^0.5.0"
-django-ninja-auth = "^0.1.5"
+psycopg2 = "^2.9.7"
+uvicorn = {extras = ["standard"], version = "^0.23.2"}
+pytest = "^7.4.0"
+dj-database-url = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
-isort = "^5.8.0"
-ipython = "^7.23.1"
-ipdb = "^0.13.8"
-flake8 = "^3.9.2"
-flake8-print = "^4.0.0"
-pytest-django = "^4.3.0"
+isort = "^5.12.0"
+ipython = "^8.14.0"
+ruff = "^0.0.284"
+pytest-django = "^4.5.2"
 
 [tool.isort]
 multi_line_output = 3
